--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ clap = { version = "4.5.4", features = ["cargo"] }
 base64 = "0.22.1"
 local-ip-address = "0.6.3"
 rustyline = "15.0"
-cli-clipboard = "0.4.0"
+arboard = "3.4.1"
